spotless apply
Signed-off-by: Dhrubo Saha <dhrubo@amazon.com>